2001-03-14  Dirk Vangestel  <dirk.vangestel@advalvas.be>

	* scintilla-control/scintilla-editor-buffer.c (impl_get_chars):
	Corrected getting only part of the text.

2001-03-06  Dave Camp  <dave@ximian.com>

	* scintilla-control/scintilla-highlight.c (set_language_properties): 
	Slightly better default colors, and set the color for the Highlight
	Guides.

	* scintilla-control/scintilla-control.c (scintilla_factory): Connect
	to the scintilla control's "notify" signal.
	(scintilla_factory): Set all the right properties for doing code
	folding on the scintilla widget, and enable Highlight Guides.
	(expand): New function.
	(fold_changed): New function.
	(margin_click): New function.
	(notify_cb): New function.

2001-03-05  Dave Camp  <dave@ximian.com>

	* scintilla-control/scintilla-control.c (set_prop): 
	(get_prop): Fixed the prototypes of these functions.

2001-03-05  Dave Camp  <dave@ximian.com>

	* scintilla-control/scintilla/ScintillaGTK.cxx (SizeRequest): Request 
	more sane values.

2001-03-05  Dave Camp  <dave@ximian.com>

	* scintilla-control/scintilla-control.c (scintilla_factory): Add the
	line_num property.
	(set_prop): 
	(get_prop): Implemented the line_num property.

2001-03-05  JP Rosevear  <jpr@ximian.com>

	* scintilla-control/scintilla-highlight.c
	(set_language_properties): don't just set basic properties if
	there are keywords

2001-03-01  Ian McKellar  <ian@eazel.com>

	* scintilla-control/scintilla.oafinfo:
	Added a nautilus:view_as_name property to the oafinfo file so that
	the Scintilla component can be used as a Nautilus view.
	
2001-02-28  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "sv" to ALL_LINGUAS.

2001-01-10  JP Rosevear  <jpr@helixcode.com>

	* scintilla-control/scintilla/ScintillaGTK.cxx: proper casting

2001-01-06  Dave Camp  <dave@helixcode.com>

	* scintilla-control/scintilla.oafinfo: Updated.

	* scintilla-control/scintilla-persist-file.c: Moved highlighting
	functions to scintilla-highlight.h